# mssql_mcp_server

./: README.md  pyproject.toml
src/mssql_mcp_server/: server.py
